[package]
name = "orderbook-trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core orderbook dependencies
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde_json = "1.0"

# Atomic operations and synchronization
crossbeam = "0.8"
parking_lot = "0.12"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Command line parsing for load generator
clap = { version = "4.0", features = ["derive"] }

# Random number generation
rand = "0.8"
influxdb2 = "0.5.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
prometheus = ["metrics-exporter-prometheus"]
influxdb = []
full-metrics = ["prometheus", "influxdb"]
influxdb2 = []

[[bin]]
name = "trading_server"
path = "src/bin/trading_server.rs"

[[bin]]
name = "load_generator"
path = "src/bin/load_generator.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
